fixtures/frontend/milestone-1/invalid/regex_invalid_quantifier.aivi
val brokenPattern = rx"a{2,1}"
